--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+
+}
+
+header {
+  width: 100%;
+  height: 140px;
+  background-color: rgb(24, 27, 40);
+}
+
+.container {
+  width: 80%;
+
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 100px;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+
+  height: 100%;
+
+}
+
+.menu_container {
+  display: flex;
+  gap: 20px;
+  height: 100%;
+  list-style-type: none;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(252, 252, 252);
+}
+
+main {
+  min-height: calc(100% - 140px);
+  background: linear-gradient(rgba(27, 27, 40, 1), rgba(0, 0, 0, 0.8)), url('site-library-hero-background-1.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: top;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main_page {
+  display: flex;
+  justify-content: center;
+  color: white;
+  align-items: center;
+  font-size: 30px;
+}
+
+
+
+
+.container_form {
+  padding: 16px;
+  background-color: rgbа(61, 52, 52, 0.3);
+}
+
+/* Full-width input fields */
+input[type=text],
+input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus,
+input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Overwrite default styles of hr */
+/* hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+} */
+
+/* Set a style for the submit button */
+.registerbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.registerbtn:hover {
+  opacity: 1;
+}
+
+.signin {
+  background-color: transparent;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.profile {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+}
+
+.logout_button {
+  cursor: pointer;
+  border-radius: 10px;
+  width: 100px;
+  height: 40px;
+  outline: none;
+  border: none;
+}
+
+li a {
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link_to {
+  background: #4CAF50;
+  text-decoration: none;
+  color: white;
+  border-radius: 10px;
+  padding: 5px;
 }
